--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,9 +16,9 @@
     <% @articles.each do |article| %>
       <tr>
         <td><%= article.title %></td>
-        <td><%= article.author %></td>
+        <td><%= article.user_id %></td>
         <td><%= article.text %></td>
-        <td><%= link_to 'Show', article %></td>
+        <td><%= link_to 'Show', article_path(:id => "#{article.id}-#{article.title.parameterize}") %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
         <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -29,3 +29,4 @@
 <br>
 
 <%= link_to 'New Article', new_article_path %>
+<%= link_to 'Main', root_path %>
